# ec552-ciallo-agent

./: .env.example  .gitignore  README.md  SynBio选题.docx  ciallo-agent：LLM-driven Genetic Circuit Compiler.pptx  pyproject.toml
data/examples/: custom_library_request.json  design_brief.json
docs/: architecture.md
docs/examples/verified-official-baseline/: Eco1C1G1T1.input.json  Eco1C1G1T1.output.json  README.md  design_spec.json  e_coli_biosensor.v  manifest.json  summary.md
docs/examples/verified-official-baseline/cello_output/: e_coli_biosensor.edif  e_coli_biosensor.json
scripts/: bootstrap_cello.sh
src/ciallo_agent/: __init__.py  brief.py  cello_runner.py  cli.py  config.py  custom_library.py  design_pipeline.py  generator.py  library.py  models.py  paper_to_ucf.py  pipeline.py  planner.py  prompts.py  ucf_diff.py  ucf_drafts.py  validation.py  webapp.py
src/ciallo_agent/web_assets/: app.js  index.html  styles.css
src/tello/: README_tello.md  tello_build.py  tello_netlist.py  tello_simulation.py  tello_test.py
tests/: test_brief.py  test_config.py  test_custom_library.py  test_library.py  test_paper_to_ucf.py  test_pipeline.py  test_planner.py  test_ucf_diff.py  test_ucf_drafts.py
